# Producer_Consumer_System

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  Makefile  README.md  TODO_LIST.txt  build.ps1  clean.ps1  format.sh  run_debug.ps1  run_release.ps1
include/: byte.h  cmd_args.h  consumer.h  main.h  producer.h  ring_buffer.h  sleep_thread.h  thread.h
src/: cmd_args.c  consumer.c  main.c  producer.c  ring_buffer.c  sleep_thread.c  thread.c
